no es muy importante solo modifique el nombre de la classe de la parte frontal de la consola tanto en html como en css

--- a/consola.html
+++ b/consola.html
@@ -12,12 +12,12 @@
 
     <header><H1>Consola con Css y divs </H1></header>
 
-     <!--Creando la carcasa frontal-->
-     <div class="carcasaFrontal">
-         <!--dentro esta la pantalla las teclas ...etc-->
+     <!--Creando la parte frontal-->
+     <div class="parteFrontal">
+         <!--dentro esta la pantalla , las teclas ...etc-->
 
             <div class="flechas">
-         <!--Es un div de 9 divs-->
+         <!--Es un div de 9 divs para construir las flechas-->
                 <div class="uno"></div>
                 <div class="dos">
                     <div class="triangulo" id="arriba"></div>
@@ -38,7 +38,7 @@
             </div>
 
             <div class="botones">
-                <!--Es un div de 9 divs-->
+                <!--Es un div de 9 divs para la construccion de los botones-->
                        <div class="uno"></div>
                        <div class="dos"   id="dos"></div>
                        <div class="tres"></div>
