he modificado casi todo el proyecto, modifique las flechas , los botones,añadi reset power y un chivato. lo siguiente sera hacer funcionar el boton encendido.

--- a/consola.html
+++ b/consola.html
@@ -13,34 +13,17 @@
     <header><H1>Consola con Css y divs </H1></header>
 
      <!--Creando la parte frontal-->
-     <div class="parteFrontal">
+       <div class="parteFrontal">
          <!--dentro esta la pantalla , las teclas ...etc-->
 
-            <div class="flechas">
-         <!--Es un div de 9 divs para construir las flechas-->
-                <div class="uno"></div>
-                <div class="dos">
-                    <div class="triangulo" id="arriba"></div>
-                </div>
-                <div class="tres"></div>
-                <div class="cuatro">
-                    <div class="triangulo" id="izquierda"></div>
-                </div>
-                <div class="cinco"></div>
-                <div class="seis">
-                    <div class="triangulo" id="derecha"></div>
-                </div>
-                <div class="siete"></div>
-                <div class="ocho">
-                    <div class="triangulo" id="abajo"></div>
-                </div>
-                <div class="nueve"></div>
-            </div>
+               <div class="flechas">
+               <div id="izq"></div>
+               </div>
 
-            <div class="botones">
+                 <div class="botones">
                 <!--Es un div de 9 divs para la construccion de los botones-->
                        <div class="uno"></div>
-                       <div class="dos"   id="dos"></div>
+                       <div class="dos"   id="dos"> </div>
                        <div class="tres"></div>
                        <div class="cuatro" id="cuatro"></div>
                        <div class="cinco" id="cinco"></div>
@@ -49,13 +32,17 @@
                        <div class="ocho"   id="ocho"></div>
                        <div class="nueve"></div>
                    </div>
-               <div class="select"></div>  
-               <div class="start"></div> 
-               <div class="power"></div> 
 
-        <div class="bordePantalla">
+                   <div class="power" id="boton"  onclick=""> <span>ON-OFF</span>
+                       </div>
+                   <div id="chivato"></div>
+                   <div class="botonesSelectStart"></div>
+                   <div class="reset"></div>
+                   <div class="rejilla"></div>
 
-              <div class="pantalla"></div>
+                <div class="bordePantalla">
+
+                <div class="pantalla"></div>
         
         </div>
     <!--div del contenedor clase carcasafrontal-->
