he modificado el titulo

--- a/consola.html
+++ b/consola.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <header><H1>Consola con Css y divs </H1></header>
+    <header><H1>Consola con Css</H1></header>
 
      <!--Creando la parte frontal-->
        <div class="parteFrontal">
