modifique la pantalla añadiendo dos imagenes , que ahora estan comentados nada mas,y he modificado los botos de on -off

--- a/consola.html
+++ b/consola.html
@@ -33,8 +33,11 @@
                        <div class="nueve"></div>
                    </div>
 
-                   <div class="power" id="boton"  onclick=""> <span>ON-OFF</span>
-                       </div>
+                   <button class="powerOn" id="on"  onclick=""><span>ON</span>
+                   </button>
+
+                   <button class="powerOff" id="off"  onclick=""> <span>Off</span>
+                   </button>
                    <div id="chivato"></div>
                    <div class="botonesSelectStart"></div>
                    <div class="reset"></div>
@@ -42,7 +45,10 @@
 
                 <div class="bordePantalla">
 
-                <div class="pantalla"></div>
+                <div class="pantalla">
+                    <!--<img src="/img/resize-16113013091761102156BlackBG101.png" id="black">
+                    <img src="/img/resizedSSFIItitlescreen.gif" id="street">-->
+                </div>
         
         </div>
     <!--div del contenedor clase carcasafrontal-->
