--- a/consola.html
+++ b/consola.html
@@ -51,7 +51,7 @@
                 </div>
         
         </div>
-    <!--div del contenedor clase carcasafrontal-->
+    <!--div del contenedor clase parteFrontal-->
      </div>
 
 
