sigo con el error de la carga de estilos en github pages, sigo intentando solucionar , el problema

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consola</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 
     </head>
 
@@ -24,13 +24,13 @@
                  <div class="botones">
                 <!--Es un div de 9 divs para la construccion de los botones-->
                        <div class="uno"></div>
-                       <div class="dos"   id="dos"> </div>
+                       <div class="dos" id="dos"></div>
                        <div class="tres"></div>
                        <div class="cuatro" id="cuatro"></div>
                        <div class="cinco" id="cinco"></div>
                        <div class="seis" id="seis"></div>
                        <div class="siete"></div>
-                       <div class="ocho"   id="ocho"></div>
+                       <div class="ocho" id="ocho"></div>
                        <div class="nueve"></div>
                    </div>
 
